test/classes/override/override-no-parens.good
override-no-parens.chpl:6: error: Child.foo override keyword present but parentheses-less methods cannot override
